api-reader/api-reader-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-reader
  namespace: api-reader
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api-reader
  template:
    metadata:
      labels:
        app: api-reader
    spec:
      containers:
        - name: api-backend
          image: iad.ocir.io/idlhjo6dp3bd/api-reader:latest
          ports:
            - containerPort: 8080
