api-reader/api-reader-manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-reader-web-svc
  namespace: api-reader
spec:
  selector:
    app: api-reader
  ports:
    - name: frontend
      port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
